2002-11-07  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b22

	* Changed shutterfly PSID to "GALL"

	* Suppressed some more open_basedir warnings in the config wizard.

	* Fixed bug #524944: Config Wizard allows too many rows.  Changed the default
	  rows/columns to use pulldowns instead of a text box.

	* Fixed bug #551569: edit_appearance fails under Nuke with certain
	  browsers.  We had a duplicate form tag, and the second one was bogus.

2002-11-05  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b21

	* Further fixed bugs in view_album.php where admin links were not
	  specifying the album name correctly, which would fail if the album
	  information were not getting stored in the session properly.

2002-11-04  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.2-cvs-b20

        * Bumped gallery_remote2 protocol version to 2.1.

2002-11-04  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b19

	* Fixed two small bugs in the setup code where we were using 
	  is_executable instead of fs_is_executable (thanks Kwan Skinner)

2002-11-02  Tim Miller <tim_miller@users.sourceforge.net> 1.3.2-cvs-b18

	* Added the "new-album" command to gallery_remote2.php.
	* Removed some incorrect urlencoding.

2002-10-31  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b17

	* Fixed a bug in view_album.php where we were generating admin links
	  with "albumName=xxx" instead of "set_albumName=xxx".  This would
	  cause fatal errors under certain rare circumstances.

2002-10-31  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b16

	* Minor tweak: if the full name is empty, display the username in the
	  "Welcome, xxx" message on albums.php

	* Integrated Jesse Mullan's albumdb refactoring code in a separate
	  branch.  This code separates out the information about each photo
	  from the album metadata which allows us to load much less data into
	  memory when we load an album.  This will speed up cross-album
	  operations and use less memory (yay Jesse!)
