@@ -1,3 +1,8 @@
+2002-11-08  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b23
+
+	* Fixed a bug in the slideshow where it was not obeying the "can view
+	  full size images" permission properly (thanks to Akki)
+
 2002-11-07  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b22
 
 	* Changed shutterfly PSID to "GALL"
